--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "scripts": {
+    "dev": "vite"
+  },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
