--- a/package.json
+++ b/package.json
@@ -34,19 +34,15 @@
     "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.15.10",
     "@radix-ui/react-slot": "^1.1.1",
+    "@rainbow-me/rainbowkit": "^2.2.3",
     "@reach/router": "^1.3.4",
     "@tabler/icons-react": "^3.28.1",
+    "@tanstack/react-query": "^5.65.1",
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
-    "@web3-onboard/coinbase": "^2.2.5",
-    "@web3-onboard/core": "^2.21.2",
-    "@web3-onboard/injected-wallets": "^2.10.5",
-    "@web3-onboard/ledger": "^2.5.2",
-    "@web3-onboard/metamask": "^2.0.2",
-    "@web3-onboard/react": "^2.8.13",
-    "@web3-onboard/wagmi": "^2.0.1",
-    "@web3-onboard/walletconnect": "^2.5.3",
+    "@wagmi/connectors": "^5.7.5",
+    "@wagmi/core": "^2.16.3",
     "assert": "^2.1.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
@@ -64,7 +60,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
-    "react-query": "^3.39.3",
+    "react-toastify": "^11.0.3",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
@@ -75,7 +71,8 @@
     "vite-plugin-material-ui": "^1.0.1",
     "vite-plugin-svgr": "^4.3.0",
     "vite-plugin-transform": "^2.0.1",
-    "vite-plugin-webfont-dl": "^3.10.4"
+    "vite-plugin-webfont-dl": "^3.10.4",
+    "wagmi": "^2.14.9"
   },
   "engines": {
     "node": ">=20.0.0",
